--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -44,7 +44,7 @@
 
 .chat-bubble {
   max-width: 75%;
-  padding: 12px;
+  padding: 10px;
   border-radius: 10px;
   position: relative;
   word-wrap: break-word;
@@ -352,16 +352,21 @@
 }
 
 .badge {
-  background-color: rgb(30, 142, 211);
+  background-color: rgb(34, 142, 209);
   color: white;
   font-size: 0.75rem;
   font-weight: bold;
-  padding: 4px 8px;
-  border-radius: 20px;
-  min-width: 24px;
+  width: 22px;
+  height: 22px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   text-align: center;
-  margin-left: auto;
+  margin-left: 8px;
 }
+
+
 .chat-media {
   max-width: 220px;
   max-height: 180px;
@@ -400,4 +405,16 @@
 .message-content img, .message-content video {
   display: block;
   margin-top: 5px;
+}
+.typing-indicator {
+  padding: 5px 10px;
+  font-style: italic;
+  color: #888;
+  margin-left: 10px;
+}
+.msg-time {
+  font-size: 10px;
+  color: #999;
+  margin-top: 3px;
+  text-align: right;
 }
